Fixed logo width on tablet dimensions

--- a/front-end/src/components/Header/Header.scss
+++ b/front-end/src/components/Header/Header.scss
@@ -32,18 +32,8 @@
   }
 
   @include on-tablet {
-    .Header__logo {
-      width: 100%;
-    }
-
     .Header__menu {
       display: none;
-    }
-  }
-
-  @include on-laptop {
-    .Header__logo {
-      width: 100%;
     }
   }
 
